--- a/views/base.pug
+++ b/views/base.pug
@@ -1,30 +1,39 @@
 doctype html 
 html 
     head 
-        //- title Natours
-        title Natours | #{tour}
-        
-        //- <link rel="stylesheet" href="style.css">
-        link(rel='stylesheet' href='css/style.css') 
-        //- link(rel="stylesheet", href="css/style.css") 
-
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel='stylesheet' href='css/style.css')
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
-        //- link(rel="shortcut icon", href="img/favicon.png", type="image/png")
+        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+        title Natours | Exciting tours for adventurous people
 
+    body
+        // HEADER
+        header.header
+            nav.nav.nav--tours
+                a.nav__el(href='#') All tours
+            div.header__logo
+                img(src="img/logo-white.png", alt="Natours Logo")
+            nav.nav.nav--user
+                //- a.nav__el(href='#') My bookings
+                //- a.nav__el(href='#')
+                //-     img.nav__user-img(src='img/user.jpg', alt="User photo")
+                //-     span Javy
+                button.nav__el.nav__el Log in
+                button.nav__el.nav__el--cta Sign up
 
-    body 
-        div.container
-            p This is DIV 
-        h2= tour 
-
-        //- We can run simple JS (Buffered code)
-        h2= user.toUpperCase()
-        // p this is just text
-        //- p this is just text
-        p this is just some text
-
-        //- We can run simple JS (Unbuffered code)
-        - const num = 10
-        h2= 9 + num 
-        
-        
+        // CONTENT
+        main.main
+            h1= tour 
+        .footer
+            .footer__logo 
+                img(src="img/logo-green.png", alt="Natours logo")
+            ul.footer__nav 
+                li: a(href='#') About us
+                li: a(href='#') Download apps
+                li: a(href='#') Become a guide
+                li: a(href='#') Careers
+                li: a(href='#') Contact 
+            p.footer__copyright &copy by Javy
+    
