--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,5 +1,18 @@
 extends base
 
+include _reviewCard
+
+//- mixin reviewCard(review)
+//-   .reviews__card
+//-     .reviews__avatar
+//-       img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`)
+//-       h6.reviews__user= review.user.name
+//-     p.reviews__text= review.review
+//-     .reviews__rating
+//-       each star in [1, 2, 3, 4, 5]
+//-         svg.reviews__star(class=`reviews__star--${review.rating >= star ? 'active' : 'inactive'}`)
+//-           use(xlink:href='/img/icons.svg#icon-star')
+
 mixin overviewBox(label, text, icon)
   .overview-box__detail
     svg.overview-box__icon
@@ -15,7 +28,7 @@ block content
 
     .heading-box
       h1.heading-primary
-        span= tour.name
+        span= `${tour.name} tour`
       .heading-box__group
         .heading-box__detail
           svg.heading-box__icon
@@ -37,34 +50,18 @@ block content
           +overviewBox('participants', `${tour.maxGroupSize} people`, 'user')
           +overviewBox('rating', `${tour.ratingsAverage} / ${tour.ratingsQuantity}`, 'user')
 
-          //- .overview-box__detail
-          //-   svg.overview-box__icon
-          //-     use(xlink:href='/img/icons.svg#icon-calendar')
-          //-   span.overview-box__label Next date
-          //-   span.overview-box__text= tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
-          //- .overview-box__detail
-          //-   svg.overview-box__icon
-          //-     use(xlink:href='/img/icons.svg#icon-trending-up')
-          //-   span.overview-box__label Difficulty
-          //-   span.overview-box__text= tour.difficulty 
-          //- .overview-box__detail
-          //-   svg.overview-box__icon
-          //-     use(xlink:href='/img/icons.svg#icon-user')
-          //-   span.overview-box__label Participants
-          //-   span.overview-box__text= `${tour.maxGroupSize} people`
-          //- .overview-box__detail
-          //-   svg.overview-box__icon
-          //-     use(xlink:href='/img/icons.svg#icon-star')
-          //-   span.overview-box__label Rating
-          //-   span.overview-box__text= `${tour.ratingsAverage} / ${tour.ratingsQuantity}`
-
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Your tour guides
-          each guide of tour.guides
+          each guide in tour.guides
             .overview-box__detail
-              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.na,e}`)
-              span.overview-box__label= guide.role 
-              span.overview-box__text= guide.name 
+              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+
+              - if (guide.role === 'lead-guide')
+                span.overview-box__label Lead guide 
+              - if (guide.role === 'guide')
+                span.overview-box__label Tour guide 
+              span.overview-box__text= guide.name
+
           //- .overview-box__detail
           //-   img.overview-box__img(src='/img/users/user-18.jpg', alt='Tour guide')
           //-   span.overview-box__label Tour guide
@@ -75,48 +72,52 @@ block content
           //-   span.overview-box__text Max Smith
 
     .description-box
-      h2.heading-secondary.ma-bt-lg About the park camper tour
-      p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
+      h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
+      - const paragraphs = tour.description.split('\n')
+      each p in paragraphs 
+        p.description__text= p
+
 
   section.section-pictures
-    .picture-box
-      img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
-    .picture-box
-      img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
+    each img, i in tour.images
+      .picture-box
+        img.picture-box__img(src=`/img/tours/${img}`, alt=`${tour.name} Tour ${i + 1}`, class=`picture-box__img--${i +1 }`)
+
+    //-   .picture-box
+    //- img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
 
   section.section-map
     #map
 
   section.section-reviews
     .reviews
+      each review in tour.reviews
+        +reviewCard(review)
 
-      .reviews__card
-        .reviews__avatar
-          img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-          h6.reviews__user Jim Brown
-        p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
-        .reviews__rating
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
-          svg.reviews__star.reviews__star--active
-            use(xlink:href='/img/icons.svg#icon-star')
+        //- .reviews__card
+        //-   .reviews__avatar
+        //-     img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
+        //-     h6.reviews__user Jim Brown
+        //-   p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
+        //-   .reviews__rating
+        //-     svg.reviews__star.reviews__star--active
+        //-       use(xlink:href='/img/icons.svg#icon-star')
+        //-     svg.reviews__star.reviews__star--active
+        //-       use(xlink:href='/img/icons.svg#icon-star')
+        //-     svg.reviews__star.reviews__star--active
+        //-       use(xlink:href='/img/icons.svg#icon-star')
+        //-     svg.reviews__star.reviews__star--active
+        //-       use(xlink:href='/img/icons.svg#icon-star')
+        //-     svg.reviews__star.reviews__star--active
+        //-       use(xlink:href='/img/icons.svg#icon-star')
 
   section.section-cta
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-      img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[0]}`, alt='Tour Picture')
+      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[1]}`, alt='Tour Picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
-        p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
+        p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
         button.btn.btn--green.span-all-rows Book tour now!
