--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,6 +2,10 @@ extends base
 
 include _reviewCard
 
+block append head 
+  //- script(src='/js/mapbox.js')  
+
+
 //- mixin reviewCard(review)
 //-   .reviews__card
 //-     .reviews__avatar
@@ -87,7 +91,7 @@ block content
     //- img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
