--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1270,3 +1270,9 @@ body {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
 }
+
+/* .mapPopup {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.4rem;
+} */
