--- a/views/tour.pug
+++ b/views/tour.pug
@@ -3,7 +3,9 @@ extends base
 include _reviewCard
 
 block append head 
-  //- script(src='/js/mapbox.js')  
+  link(rel='stylesheet' href='https://unpkg.com/leaflet@1.6.0/dist/leaflet.css')
+  script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js')
+  script(src='/js/leaflet.js' defer)
 
 
 //- mixin reviewCard(review)
