Logging un Users with Our API - Part 3

--- a/views/base.pug
+++ b/views/base.pug
@@ -21,4 +21,5 @@ html
         include _footer
 
         //- script(src='/js/leaflet.js')
-        //- script(src='/js/login.js')
+        //- script(src='/js/index.js')
+        script(src='/js/bundle.js')
