--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,8 @@
 extends base 
 
 block append head 
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.js')
-    script(src='/js/login.js' defer)
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.js')
+    //- script(src='/js/login.js' defer)
     
 
 block content
