--- a/views/base.pug
+++ b/views/base.pug
@@ -22,4 +22,5 @@ html
 
         //- script(src='/js/leaflet.js')
         //- script(src='/js/index.js')
+        script(src='https://js.stripe.com/v3/')
         script(src='/js/bundle.js')
